# libvpl

./: .clang-format  .cmake-format  .gitattributes  .gitignore  .gitlint  .hadolint.yaml  .kwignore  .pre-commit-config.yaml  .pylintrc  .style.yapf  .trivyignore.yaml  .yamllint.yaml  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  INSTALL.md  LICENSE  README.md  bandit.yaml  index.html  onevpl.snyk  requirements-dev.txt  security.md  third-party-programs.txt  version.txt
api/: CMakeLists.txt  CPPLINT.cfg  libmfx.pc.in  vpl.pc.in
api/strings/: strings.csv  strings.md
api/tests/abi/: abi_test_gen.py  check_missing_structs.py  check_pack.py  mfx_static_assert_structs.cpp
api/tests/compile_headers/: removed_api.h  sdk_headers.inc  test.c  test.cpp
api/tests/doc_examples/: dummy_impl.c  main.c
api/tests/docker/: Dockerfile.clang  Dockerfile.gcc
api/vpl/: mfx.h  mfxadapter.h  mfxbrc.h  mfxcamera.h  mfxcommon.h  mfxdefs.h  mfxdispatcher.h  mfxdispatcherprefixedfunctions.h  mfxencodestats.h  mfximplcaps.h  mfxjpeg.h  mfxmemory.h  mfxmvc.h  mfxpcp.h  mfxsession.h  mfxstructures.h  mfxsurfacepool.h  mfxvideo++.h  mfxvideo.h  mfxvp8.h  mfxvp9.h  mfxvstructures.h
api/vpl/preview/: README.txt  bitstream.hpp  defs.hpp  exception.hpp  extension_buffer.hpp  extension_buffer_list.hpp  frame_pool.hpp  frame_surface.hpp  future.hpp  impl_caps.hpp  impl_selector.hpp  option_tree.hpp  options.hpp  payload.hpp  property_name.hpp  session.hpp  source_reader.hpp  stat.hpp  surface_pool.hpp  video_param.hpp  vpl.hpp
dispatcher/: CMakeLists.txt  CPPLINT.cfg
dispatcher/cmake/: VPLConfig.cmake.in  VPLConfigVersion.cmake.in
dispatcher/linux/: device_ids.h  mfxloader.cpp  mfxloader.h
dispatcher/pkgconfig/: vpl.pc.in
dispatcher/test/: CMakeLists.txt
dispatcher/test/mfxinit-test/: CMakeLists.txt  main.cpp
dispatcher/test/unit/: CMakeLists.txt
dispatcher/test/vpl-timing/: CMakeLists.txt  vpl-timing.cpp  vpl-timing.h
dispatcher/vpl/: mfx_dispatcher_vpl.cpp  mfx_dispatcher_vpl.h  mfx_dispatcher_vpl_config.cpp  mfx_dispatcher_vpl_loader.cpp  mfx_dispatcher_vpl_log.h  mfx_dispatcher_vpl_lowlatency.cpp  mfx_dispatcher_vpl_msdk.cpp
dispatcher/windows/: main.cpp  mfx_critical_section.h  mfx_dispatcher.cpp  mfx_dispatcher.h  mfx_dispatcher_defs.h  mfx_dispatcher_log.cpp  mfx_driver_store_loader.cpp  mfx_driver_store_loader.h  mfx_dxva2_device.cpp  mfx_dxva2_device.h  mfx_function_table.cpp  mfx_library_iterator.cpp  mfx_library_iterator.h  mfx_load_dll.cpp  mfx_load_dll.h  mfx_vector.h  mfx_win_reg_key.cpp
doc/: CMakeLists.txt  multi-adapter-guide.md  smt-cascade-scaling-readme.md  smt-parallel-encoding-readme.md  smt-tracer-readme.md  surface_sharing_apis_overview.md
doc/developer-reference/: README.md  VPL_apnds.rst  VPL_apnds_a.rst  VPL_architecture.rst  VPL_decoding.rst  VPL_encoding.rst  VPL_memory_use.rst  VPL_session.rst  VPL_sync.rst  VPL_vpp.rst  build.rst  conf.py  examples.dox  index.rst  limitations_and_supported_params.rst
doc/spec/: Doxyfile  README.md  build-spec.py  common_conf.py  element_conf.py  install.sh  requirements.txt  spelling_wordlist.txt  ubuntu-packages.txt  vplapi.py
doc/spec/docker/: Dockerfile.build
doc/spec/source/: Experimental.rst  VPL_acronyms.rst  VPL_change_log.rst  VPL_intel_media_sdk.rst  VPL_summary.rst  Versioning.rst  conf.py  index.rst
env/: CMakeLists.txt
env/bash/: vars.sh
env/cmd/: vars.bat  vars32.bat  varsxx.bat.in
env/sh/: vars.sh.in
examples/: CMakeLists.txt  CPPLINT.cfg  README.md
examples/api1x_core/legacy-decode/: CMakeLists.txt  README.md  sample.json
examples/api1x_core/legacy-encode/: CMakeLists.txt  README.md
examples/api1x_core/legacy-vpp/: CMakeLists.txt  README.md
examples/api2x/hello-createsession/: CMakeLists.txt  README.md
examples/api2x/hello-decode/: CMakeLists.txt  README.md
examples/api2x/hello-decvpp/: CMakeLists.txt  README.md  sample.json
examples/api2x/hello-encode/: CMakeLists.txt  README.md  sample.json
examples/api2x/hello-encode-jpeg/: CMakeLists.txt  README.md
examples/api2x/hello-sharing-dx11/: CMakeLists.txt  README.md
examples/api2x/hello-sharing-ocl/: CMakeLists.txt  README.md
examples/api2x/hello-sharing-vaapi/: CMakeLists.txt  README.md
examples/api2x/hello-transcode/: CMakeLists.txt  README.md
examples/api2x/hello-vpp/: CMakeLists.txt  README.md
examples/content/: cars_320x240.h264  cars_320x240.h265  cars_320x240.i420  cars_320x240.mjpeg  cars_320x240.nv12  cars_320x240.y8
examples/coreAPI/legacy-decode/: CMakeLists.txt  README.md  sample.json
examples/coreAPI/legacy-vpp/: README.md  (+2 more)
examples/dpcpp-blur/: CMakeLists.txt  README.md
examples/hello-createsession/: CMakeLists.txt  README.md
examples/hello-decode/: CMakeLists.txt  License.txt  README.md  hello-decode.vcxproj  sample.json
examples/hello-decvpp/: CMakeLists.txt  sample.json
examples/hello-encode/: CMakeLists.txt  README.md  hello-encode.vcxproj  sample.json
examples/hello-transcode/: CMakeLists.txt  README.md  hello-transcode.sln  hello-transcode.vcxproj
examples/hello-vpp/: CMakeLists.txt  README.md  sample.json
examples/util/: CMakeLists.txt
libvpl/: CMakeLists.txt
libvpl/cmake/: VPLConfig.cmake.in
libvpl/pkgconfig/: vpl.pc.in
libvpl/src/: mfx_dispatcher_vpl.cpp  mfx_dispatcher_vpl.h  mfx_dispatcher_vpl_config.cpp  mfx_dispatcher_vpl_loader.cpp  mfx_dispatcher_vpl_log.cpp  mfx_dispatcher_vpl_log.h  mfx_dispatcher_vpl_lowlatency.cpp  mfx_dispatcher_vpl_msdk.cpp  mfx_dispatcher_vpl_win.h
libvpl/test/: CMakeLists.txt
modulefiles/: CMakeLists.txt  vpl
preview/python/: CMakeLists.txt
src/: CMakeLists.txt
src/cpu/: CMakeLists.txt
src/dispatcher/: CMakeLists.txt
test/unit/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  CPPLINT.cfg
tools/cli/: CMakeLists.txt  CPPLINT.cfg  README.md  vpl-common.h  vpl-decenc.cpp  vpl-decode.cpp  vpl-decvpp.cpp  vpl-encode.cpp  vpl-inspect.cpp  vpl-new-dispatcher.cpp  vpl-vpp.cpp  vpl-vppenc.cpp
tools/legacy/: .clang-format  1s_main_legacy.gitlog  CMakeLists.txt  CPPLINT.cfg  README.md  readme-setup.txt
(+1122 files in other folders)
